--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <!-- Background image as an img tag -->
-    <img src="C:\sigma moment code\trenirovka\dylangay\bg.jpg" alt="Background" class="bg-image">
+    <img src="\dylangay\bg.jpg" alt="Background" class="bg-image">
 
     <header>
         <div class="container">
-            <img src="C:\sigma moment code\trenirovka\dylangay\logo.webp" alt="Datapack Logo" class="datapack-logo">
+            <img src="\dylangay\logo.webp" alt="Datapack Logo" class="datapack-logo">
             <h1>Realms No Lag by Akol</h1>
         </div>
     </header>
